--- a/src/mylangchain_app/03ChatBot/02chatbot_gradio_chatopenai.ipynb
+++ b/src/mylangchain_app/03ChatBot/02chatbot_gradio_chatopenai.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -124,7 +124,36 @@
     "id": "3_Wj7jaE4giS",
     "outputId": "b9e33cb5-b7d6-4080-89eb-7722641b7f50"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/eon/skRookies/myLangChain/mylangchain-app/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "content='파이썬(Python)은 1991년 네덜란드의 개발자 귀도 반 로섬(Guido van Rossum)이 만든 **고급 프로그래밍 언어**입니다.  \\n간결하고 읽기 쉬운 문법을 갖춰 **초보자도 배우기 쉽고**, 동시에 **전문가들이 강력하게 활용할 수 있는 언어**입니다.\\n\\n### 핵심 특징\\n- **쉬운 문법**: C나 Java보다 코드가 짧고 읽기 쉬움  \\n  예: `print(\"Hello, world!\")`\\n- **인터프리터 언어**: 컴파일 없이 바로 실행 가능\\n- **범용성**: 웹, 데이터 분석, 인공지능, 자동화, 게임, IoT 등 다양한 분야에서 사용\\n- **방대한 생태계**: NumPy, Pandas, Django, TensorFlow 등 수많은 라이브러리 보유\\n- **크로스플랫폼**: Windows, macOS, Linux 등에서 동일하게 실행 가능\\n\\n### 한 줄 요약  \\n**\"쉽게 배우고, 강력하게 쓰는 현대적 프로그래밍 언어\"**' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 312, 'prompt_tokens': 34, 'total_tokens': 346, 'completion_tokens_details': None, 'prompt_tokens_details': None, 'queue_time': 0.277943655, 'prompt_time': 0.009931324, 'completion_time': 2.02612146, 'total_time': 2.036052784}, 'model_name': 'moonshotai/kimi-k2-instruct-0905', 'system_fingerprint': 'fp_6e6ff3688b', 'id': 'chatcmpl-708c2747-9c1f-4ceb-aa33-3bc963f2c9d5', 'service_tier': 'on_demand', 'finish_reason': 'stop', 'logprobs': None} id='run--d19d559f-f71c-4829-a178-5b277c7d3cd6-0' usage_metadata={'input_tokens': 34, 'output_tokens': 312, 'total_tokens': 346, 'input_token_details': {}, 'output_token_details': {}}\n",
+      "파이썬(Python)은 1991년 네덜란드의 개발자 귀도 반 로섬(Guido van Rossum)이 만든 **고급 프로그래밍 언어**입니다.  \n",
+      "간결하고 읽기 쉬운 문법을 갖춰 **초보자도 배우기 쉽고**, 동시에 **전문가들이 강력하게 활용할 수 있는 언어**입니다.\n",
+      "\n",
+      "### 핵심 특징\n",
+      "- **쉬운 문법**: C나 Java보다 코드가 짧고 읽기 쉬움  \n",
+      "  예: `print(\"Hello, world!\")`\n",
+      "- **인터프리터 언어**: 컴파일 없이 바로 실행 가능\n",
+      "- **범용성**: 웹, 데이터 분석, 인공지능, 자동화, 게임, IoT 등 다양한 분야에서 사용\n",
+      "- **방대한 생태계**: NumPy, Pandas, Django, TensorFlow 등 수많은 라이브러리 보유\n",
+      "- **크로스플랫폼**: Windows, macOS, Linux 등에서 동일하게 실행 가능\n",
+      "\n",
+      "### 한 줄 요약  \n",
+      "**\"쉽게 배우고, 강력하게 쓰는 현대적 프로그래밍 언어\"**\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "\n",
@@ -151,9 +180,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "content='파이썬(Python)은 1991년 네덜란드의 개빈 반 로섬(Guido van Rossum)이 발표한 고급 프로그래밍 언어입니다.  \\n“코드는 읽히는 것이다(Code is read much more often than it is written)”라는 철학을 바탕으로 **간결하고 읽기 쉬운 문법**을 특징으로 합니다.\\n\\n### 핵심 특징\\n1. **배우기 쉽다**  \\n   C/C++·자바에 비해 문법이 단순하고, 들여쓰기(indent)로 블록을 구분해 시각적으로 깔끔합니다.\\n\\n2. **인터프리터 언어**  \\n   소스를 바로 한 줄씩 실행하며, 별도의 컴파일 없이 즉시 결과를 확인할 수 있습니다.\\n\\n3. **크로스 플랫폼**  \\n   Windows·macOS·Linux·임베디드 리눅스 등 거의 모든 운영체제에서 동일한 코드로 실행됩니다.\\n\\n4. **방대한 생태계**  \\n   PyPI(Python Package Index)에 40만 개가 넘는 서드파티 라이브러리가 있어 웹·데이터 분석·인공지능·자동화·IoT 등 다양한 분야에서 “이미 만들어진 바퀴”를 그대로 가져다 쓸 수 있습니다.\\n\\n5. **강력한 표준 라이브러리**  \\n   파일·네트워크·웹·암호화·병렬 처리 등 일상적인 작업을 위한 모듈이 기본 포함돼 별도 설치 없이도 거시적 기능을 구현할 수 있습니다.\\n\\n6. **멀티패러다임**  \\n   객체 지향, 절차 지향, 함수형 스타일을 모두 지원해 문제에 맞는 스타일로 코딩할 수 있습니다.\\n\\n### 대표적 활용 분야\\n- 웹 개발: Django, Flask, FastAPI  \\n- 데이터 과학·AI: NumPy, pandas, scikit-learn, TensorFlow, PyTorch  \\n- 자동화·스크립팅: Selenium, BeautifulSoup, openpyxl  \\n- 데브옵스·클라우드: Ansible, SaltStack, AWS CDK, Serverless Framework  \\n- 교육: 초·중·고·대학의 입문 프로그래밍 언어 1순위\\n\\n### 버전\\n- Python 2.x: 2020년 공식 지원 종료  \\n- Python 3.x: 현재 활성 버전(3.12까지 출시, 3.13 베타)\\n\\n### 한 줄 요약  \\n“사람이 쓰기도, 읽기도 쉬워서 ‘실용적이고 빠른 개발’을 가능하게 하는 범용 스크립트 언어”가 파이썬입니다.' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 714, 'prompt_tokens': 34, 'total_tokens': 748, 'completion_tokens_details': None, 'prompt_tokens_details': None, 'queue_time': 0.268186239, 'prompt_time': 0.03257029, 'completion_time': 3.126495336, 'total_time': 3.159065626}, 'model_name': 'moonshotai/kimi-k2-instruct-0905', 'system_fingerprint': 'fp_b8565bb333', 'id': 'chatcmpl-31798719-b94b-4204-9743-476fb989499f', 'service_tier': 'on_demand', 'finish_reason': 'stop', 'logprobs': None} id='run--ff9b882b-b01c-4494-afa1-b6d9693b0f04-0' usage_metadata={'input_tokens': 34, 'output_tokens': 714, 'total_tokens': 748, 'input_token_details': {}, 'output_token_details': {}}\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "\n",
@@ -192,7 +229,28 @@
     "id": "wRX0aUZk7Zul",
     "outputId": "5eba57b6-5fbf-4597-de9a-d473e943d423"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7860\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# 그라디오 라이브러리를 불러옵니다.\n",
     "import gradio as gr\n",
@@ -233,13 +291,6 @@
     "# 인터페이스를 실행합니다. 실행하면 사용자는 '입력' 텍스트박스에 메시지를 작성하고 제출할 수 있으며, '초기화' 버튼을 통해 채팅 기록을 초기화 할 수 있습니다.\n",
     "demo.launch(debug=True)  "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -248,7 +299,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "mylangchain-app-SBe-Yh6W-py3.12",
+   "display_name": "mylangchain-app-py3.10",
    "language": "python",
    "name": "python3"
   },
@@ -262,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
