--- a/src/mylangchain_app/05LangGraph/03_LangGraph_MessageState_RAG.ipynb
+++ b/src/mylangchain_app/05LangGraph/03_LangGraph_MessageState_RAG.ipynb
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -696,9 +696,123 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==>1. retrieve_and_respond\n",
+      "==>2. grade_answer\n",
+      "[HumanMessage(content='2만 원보다 저렴한 메뉴가 있나요?', additional_kwargs={}, response_metadata={}, id='a681cbfc-68fc-45eb-897f-c8d53b2c1c25'),\n",
+      " AIMessage(content='2만 원(₩20,000)보다 저렴한 메뉴는 다음과 같습니다:  \\n\\n1. **가든 샐러드** (₩12,000)  \\n   - 유기농 채소, 체리 토마토, 오이, 당근, 발사믹 드레싱으로 구성된 건강한 샐러드입니다.  \\n\\n2. **트러플 리조또** (₩22,000)  \\n   - 이탈리아산 아르보리오 쌀과 블랙 트러플로 만든 크리미한 리조또로, 24개월 숙성 치즈가 풍미를 더합니다.  \\n\\n**참고**:  \\n- 나머지 메뉴(안심 스테이크 샐러드, 치킨 콘피, 해산물 파스타, 시그니처 스테이크)는 모두 2만 원 이상입니다.  \\n- 예산에 맞춰 **가든 샐러드** 또는 **트러플 리조또**를 추천드립니다!', additional_kwargs={}, response_metadata={}, id='d3a4c6a7-94ff-43b6-acc0-6685090fa018')]\n",
+      "====>2. question  <class 'langchain_core.messages.human.HumanMessage'>\n",
+      "2만 원보다 저렴한 메뉴가 있나요?\n",
+      "====>2. answer  <class 'langchain_core.messages.ai.AIMessage'>\n",
+      "2만 원(₩20,000)보다 저렴한 메뉴는 다음과 같습니다:  \n",
+      "\n",
+      "1. **가든 샐러드** (₩12,000)  \n",
+      "   - 유기농 채소, 체리 토마토, 오이, 당근, 발사믹 드레싱으로 구성된 건강한 샐러드입니다.  \n",
+      "\n",
+      "2. **트러플 리조또** (₩22,000)  \n",
+      "   - 이탈리아산 아르보리오 쌀과 블랙 트러플로 만든 크리미한 리조또로, 24개월 숙성 치즈가 풍미를 더합니다.  \n",
+      "\n",
+      "**참고**:  \n",
+      "- 나머지 메뉴(안심 스테이크 샐러드, 치킨 콘피, 해산물 파스타, 시그니처 스테이크)는 모두 2만 원 이상입니다.  \n",
+      "- 예산에 맞춰 **가든 샐러드** 또는 **트러플 리조또**를 추천드립니다!\n",
+      "====>2. context \n",
+      "5. 가든 샐러드\n",
+      "   • 가격: ₩12,000\n",
+      "   • 주요 식재료: 유기농 믹스 그린, 체리 토마토, 오이, 당근, 발사믹 드레싱\n",
+      "   • 설명: 신선한 유기농 채소들로 구성된 건강한 샐러드입니다. 아삭한 식감의 믹스 그린에 달콤한 체리 토마토, 오이, 당근을 더해 다양한 맛과 식감을 즐길 수 있습니다. 특제 발사믹 드레싱이 채소 본연의 맛을 살려줍니다.\n",
+      "\n",
+      "8. 안심 스테이크 샐러드\n",
+      "   • 가격: ₩26,000\n",
+      "   • 주요 식재료: 소고기 안심, 루꼴라, 체리 토마토, 발사믹 글레이즈\n",
+      "   • 설명: 부드러운 안심 스테이크를 얇게 슬라이스하여 신선한 루꼴라 위에 올린 메인 요리 샐러드입니다. 체리 토마토와 파마산 치즈 플레이크로 풍미를 더하고, 발사믹 글레이즈로 마무리하여 고기의 풍미를 한층 끌어올렸습니다.\n",
+      "\n",
+      "2. 트러플 리조또\n",
+      "   • 가격: ₩22,000\n",
+      "   • 주요 식재료: 이탈리아산 아르보리오 쌀, 블랙 트러플, 파르미지아노 레지아노 치즈\n",
+      "   • 설명: 크리미한 텍스처의 리조또에 고급 블랙 트러플을 듬뿍 얹어 풍부한 향과 맛을 즐길 수 있는 메뉴입니다. 24개월 숙성된 파르미지아노 레지아노 치즈를 사용하여 깊은 맛을 더했으며, 주문 즉시 조리하여 최상의 상태로 제공됩니다.\n",
+      "\n",
+      "9. 치킨 콘피\n",
+      "   • 가격: ₩23,000\n",
+      "   • 주요 식재료: 닭다리살, 허브, 마늘, 올리브 오일\n",
+      "   • 설명: 닭다리살을 허브와 마늘을 넣은 올리브 오일에 저온에서 장시간 조리한 프랑스 요리입니다. 부드럽고 촉촉한 육질이 특징이며, 로즈메리 감자와 제철 채소를 곁들여 제공합니다. 레몬 제스트를 뿌려 상큼한 향을 더했습니다.\n",
+      "\n",
+      "6. 해산물 파스타\n",
+      "   • 가격: ₩24,000\n",
+      "   • 주요 식재료: 링귀네 파스타, 새우, 홍합, 오징어, 토마토 소스\n",
+      "   • 설명: 알 덴테로 삶은 링귀네 파스타에 신선한 해산물을 듬뿍 올린 메뉴입니다. 토마토 소스의 산미와 해산물의 감칠맛이 조화를 이루며, 마늘과 올리브 오일로 풍미를 더했습니다. 파슬리를 뿌려 향긋한 맛을 더합니다.\n",
+      "\n",
+      "1. 시그니처 스테이크\n",
+      "   • 가격: ₩35,000\n",
+      "   • 주요 식재료: 최상급 한우 등심, 로즈메리 감자, 그릴드 아스파라거스\n",
+      "   • 설명: 셰프의 특제 시그니처 메뉴로, 21일간 건조 숙성한 최상급 한우 등심을 사용합니다. 미디엄 레어로 조리하여 육즙을 최대한 보존하며, 로즈메리 향의 감자와 아삭한 그릴드 아스파라거스가 곁들여집니다. 레드와인 소스와 함께 제공되어 풍부한 맛을 더합니다.\n",
+      "====>2. grade_response.score \n",
+      "0.7\n",
+      "==>3. should_retry 라우팅함수\n",
+      "----GRADTING---\n",
+      "Grade Score 점수 :  0.7\n",
+      "시도횟수 =  1\n",
+      "==>1. retrieve_and_respond\n",
+      "==>2. grade_answer\n",
+      "[HumanMessage(content='2만 원보다 저렴한 메뉴가 있나요?', additional_kwargs={}, response_metadata={}, id='da5f503c-f30f-41f7-8339-f957ef4594d8'),\n",
+      " AIMessage(content='2만 원(₩20,000)보다 저렴한 메뉴는 다음과 같습니다:  \\n\\n1. **가든 샐러드** (₩12,000)  \\n   - 유기농 채소, 체리 토마토, 오이, 당근, 발사믹 드레싱으로 구성된 건강한 샐러드입니다.  \\n\\n2. **트러플 리조또** (₩22,000)  \\n   - 이탈리아산 아르보리오 쌀과 블랙 트러플로 만든 크리미한 리조또로, 24개월 숙성 치즈가 풍미를 더합니다.  \\n\\n**참고**:  \\n- 나머지 메뉴(안심 스테이크 샐러드, 치킨 콘피, 해산물 파스타, 시그니처 스테이크)는 모두 2만 원 이상입니다.  \\n- 예산에 맞춰 **가든 샐러드** 또는 **트러플 리조또**를 추천드립니다!', additional_kwargs={}, response_metadata={}, id='bb59f927-5daf-455f-b770-1c016f1da6b9'),\n",
+      " HumanMessage(content='스테이크 가격이 2만 원 이하인 메뉴가 있나요?', additional_kwargs={}, response_metadata={}, id='0fafb239-2078-4527-bcd7-fa13ebe3709b'),\n",
+      " AIMessage(content='제공된 메뉴 중에서 **스테이크** 가격이 2만 원 이하인 메뉴는 다음과 같습니다:  \\n\\n- **안심 스테이크 샐러드** (₩26,000) → 2만 원 초과  \\n- **시그니처 스테이크** (₩35,000) → 2만 원 초과  \\n\\n따라서 **2만 원 이하의 스테이크 메뉴는 없습니다**.  \\n다만, 다른 인기 메뉴 중 **트러플 리조또(₩22,000)**나 **치킨 콘피(₩23,000)**는 2만 원대 초반으로 비슷한 가격대입니다.  \\n\\n도움이 필요하시면 추가로 안내해 드리겠습니다! 😊', additional_kwargs={}, response_metadata={}, id='29562bff-5cfb-454d-a0a8-5b62e64ec5a0')]\n",
+      "====>2. question  <class 'langchain_core.messages.human.HumanMessage'>\n",
+      "스테이크 가격이 2만 원 이하인 메뉴가 있나요?\n",
+      "====>2. answer  <class 'langchain_core.messages.ai.AIMessage'>\n",
+      "제공된 메뉴 중에서 **스테이크** 가격이 2만 원 이하인 메뉴는 다음과 같습니다:  \n",
+      "\n",
+      "- **안심 스테이크 샐러드** (₩26,000) → 2만 원 초과  \n",
+      "- **시그니처 스테이크** (₩35,000) → 2만 원 초과  \n",
+      "\n",
+      "따라서 **2만 원 이하의 스테이크 메뉴는 없습니다**.  \n",
+      "다만, 다른 인기 메뉴 중 **트러플 리조또(₩22,000)**나 **치킨 콘피(₩23,000)**는 2만 원대 초반으로 비슷한 가격대입니다.  \n",
+      "\n",
+      "도움이 필요하시면 추가로 안내해 드리겠습니다! 😊\n",
+      "====>2. context \n",
+      "1. 시그니처 스테이크\n",
+      "   • 가격: ₩35,000\n",
+      "   • 주요 식재료: 최상급 한우 등심, 로즈메리 감자, 그릴드 아스파라거스\n",
+      "   • 설명: 셰프의 특제 시그니처 메뉴로, 21일간 건조 숙성한 최상급 한우 등심을 사용합니다. 미디엄 레어로 조리하여 육즙을 최대한 보존하며, 로즈메리 향의 감자와 아삭한 그릴드 아스파라거스가 곁들여집니다. 레드와인 소스와 함께 제공되어 풍부한 맛을 더합니다.\n",
+      "\n",
+      "8. 안심 스테이크 샐러드\n",
+      "   • 가격: ₩26,000\n",
+      "   • 주요 식재료: 소고기 안심, 루꼴라, 체리 토마토, 발사믹 글레이즈\n",
+      "   • 설명: 부드러운 안심 스테이크를 얇게 슬라이스하여 신선한 루꼴라 위에 올린 메인 요리 샐러드입니다. 체리 토마토와 파마산 치즈 플레이크로 풍미를 더하고, 발사믹 글레이즈로 마무리하여 고기의 풍미를 한층 끌어올렸습니다.\n",
+      "\n",
+      "9. 치킨 콘피\n",
+      "   • 가격: ₩23,000\n",
+      "   • 주요 식재료: 닭다리살, 허브, 마늘, 올리브 오일\n",
+      "   • 설명: 닭다리살을 허브와 마늘을 넣은 올리브 오일에 저온에서 장시간 조리한 프랑스 요리입니다. 부드럽고 촉촉한 육질이 특징이며, 로즈메리 감자와 제철 채소를 곁들여 제공합니다. 레몬 제스트를 뿌려 상큼한 향을 더했습니다.\n",
+      "\n",
+      "2. 트러플 리조또\n",
+      "   • 가격: ₩22,000\n",
+      "   • 주요 식재료: 이탈리아산 아르보리오 쌀, 블랙 트러플, 파르미지아노 레지아노 치즈\n",
+      "   • 설명: 크리미한 텍스처의 리조또에 고급 블랙 트러플을 듬뿍 얹어 풍부한 향과 맛을 즐길 수 있는 메뉴입니다. 24개월 숙성된 파르미지아노 레지아노 치즈를 사용하여 깊은 맛을 더했으며, 주문 즉시 조리하여 최상의 상태로 제공됩니다.\n",
+      "\n",
+      "5. 가든 샐러드\n",
+      "   • 가격: ₩12,000\n",
+      "   • 주요 식재료: 유기농 믹스 그린, 체리 토마토, 오이, 당근, 발사믹 드레싱\n",
+      "   • 설명: 신선한 유기농 채소들로 구성된 건강한 샐러드입니다. 아삭한 식감의 믹스 그린에 달콤한 체리 토마토, 오이, 당근을 더해 다양한 맛과 식감을 즐길 수 있습니다. 특제 발사믹 드레싱이 채소 본연의 맛을 살려줍니다.\n",
+      "\n",
+      "3. 연어 타르타르\n",
+      "   • 가격: ₩18,000\n",
+      "   • 주요 식재료: 노르웨이산 생연어, 아보카도, 케이퍼, 적양파\n",
+      "   • 설명: 신선한 노르웨이산 생연어를 곱게 다져 아보카도, 케이퍼, 적양파와 함께 섞어 만든 타르타르입니다. 레몬 드레싱으로 상큼한 맛을 더했으며, 바삭한 브리오쉬 토스트와 함께 제공됩니다. 전채요리로 완벽한 메뉴입니다.\n",
+      "====>2. grade_response.score \n",
+      "0.7\n",
+      "==>3. should_retry 라우팅함수\n",
+      "----GRADTING---\n",
+      "Grade Score 점수 :  0.7\n",
+      "시도횟수 =  1\n"
+     ]
     }
    ],
    "source": [
